force-app/main/default/objects/Availability__c/Availability__c.object-meta.xml
<CustomObject>
    <description>A weekly availability window (day of week plus time range) declared by an instructor on a course plan.</description>
    <label>Availability Window</label>
    <nameField>
        <displayFormat>AVL-{0000}</displayFormat>
        <label>Availability Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Availability Windows</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>