force-app/main/default/objects/Availability__c/fields/Course_Plan__c.field-meta.xml
<CustomField>
    <fullName>Course_Plan__c</fullName>
    <label>Course Plan</label>
    <referenceTo>CoursePlan__c</referenceTo>
    <relationshipLabel>Availability Windows</relationshipLabel>
    <relationshipName>Availabilities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>